src/objects/Protocol_Violation_Report__c.object
<CustomObject>
    <fields>
        <fullName>Eligiblity_Critertia__c</fullName>
        <label>Eligiblity Critertia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrollment_Ineligible_Patient__c</fullName>
        <label>Enrollment Ineligible Patient</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incorrect_Therapy_Given__c</fullName>
        <label>Incorrect Therapy Given</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medication_Non_Compliance__c</fullName>
        <label>Medication Non Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Study_Procedure__c</fullName>
        <label>On Study Procedure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Became_Pregnant__c</fullName>
        <label>Patient Became Pregnant</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Request</label>
        <referenceTo>Report_Request__c</referenceTo>
        <relationshipLabel>Protocol Violation Reports</relationshipLabel>
        <relationshipName>Protocol_Violation_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Screening_On_Study__c</fullName>
        <label>Screening On Study</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Screening_Procedure_Required__c</fullName>
        <label>Screening Procedure Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Non_Compliance__c</fullName>
        <label>Visit Non Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Protocol Violation Report</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Protocol Violation Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>